# commentdemo

./: README.md  app.py  main.py  pyproject.toml
data/: labeled_data.csv
data_analysis/: Application_Survey_Data.xlsx - Survey Responses.csv  Classification_Results.xlsx  labelPrompt.txt
src/: classifier.py  train.py
templates/: index.html  report.html  report_setfit.html
