[project]
name = "cbre"
version = "0.1.0"
description = "CBRE Customer Service Analysis Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "flask>=3.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
]
