[project]
name = "cbre"
version = "0.1.0"
description = "CBRE Customer Service Analysis Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "setfit>=1.0.0",
    "transformers>=4.30.0,<5.0.0",
    "datasets>=2.0.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "flask>=3.0.0",
    "numpy>=1.24.0",
]
